compilateurDeca/src/test/deca/context/invalid/sans_objet/declaration/declared-twice-same-type.deca
// Description:
//    Sans-Objet
//    Affectation
//    operateur declaré deux fois;
//
// Resultats:
//    Ligne 16: 
//     opération partielle : Variable 'a' déjà déclarée dans ce bloc
// 
// Historique:
//    cree le 07/01/2026

{
    int a = 1;

    int a;
}